bug解决，增加布隆过滤器的自定义实现

--- a/pom.xml
+++ b/pom.xml
@@ -150,6 +150,15 @@
     <profiles>
         <profile>
             <id>dev</id>
+            <dependencies>
+                <dependency>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-data-redis</artifactId>
+                </dependency>
+            </dependencies>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
             <build>
                 <plugins>
                     <plugin>
